# statspy

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01.ipynb
sirius/: __init__.py
sirius/descriptive/: dispersion.py  location.py
statspy/: __init__.py
statspy/descriptive/: dispersion.py
