[tool.poetry]
name = "statspy"
version = "0.1.0"
description = ""
authors = ["Lucas Siqueira <siqueiraq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.1"
mypy = "^1.13.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
